--- a/test1.html
+++ b/test1.html
@@ -11,7 +11,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
-    <script type="text/javascript" src="lib\angular.min.js"></script>
+    <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app1.js"></script>
 
   </head>
